--- a/DemoMVC/Views/Shared/_Layout.cshtml
+++ b/DemoMVC/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("首頁", "Index", "Home")</li>
                     <li>@Html.ActionLink("關於", "About", "Home")</li>
                     <li>@Html.ActionLink("連絡方式", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("會員管理", "Index", "Member")</li>
                 </ul>
             </div>
         </div>
